# postie

./: .env  .env-example  .gitignore  .rustfmt.toml  Cargo.toml  Makefile  Packager.toml  README.md  postie.sqlite  todos.db
.github/workflows/: release.yml
.sqlx/: query-3f4138ff7172d082687ff3f21a9517c2a43aa76b51f20a3388037b11482ee6ab.json  query-56c68755bc306da5faac8e04da205df9bb48a1fc342955af69b23a0bf3d84e9c.json  query-58000e1c365a29283a1e84e3953e14fc2bf207c475bd6fb1903f38854ff632cc.json  query-64e1640e0fb7b29949dd32a8bb55e567417d1ae8ca3e8e5cf97e0f288a8ae46a.json  query-6880e316e7056a286e2140ce4be5c496e87917b1b94b64860c89259b9d7b0236.json  query-6dfeb48df51bbaa99128194b2c3ac8b65723f37ffd611689f2b62ed9a5edb585.json  query-a98cdcd7ca706861f75f396743169671b1129800dba0816184665e5cd3624c66.json  query-f15afa3e7bdc037c6405e0cee8dc37b4395343e0efe2187838dbe3ae08c7cb38.json
api/: Cargo.toml  todos.db
api/migrations/: 20231016060642_request_history.sql  20240207020559_create-collection-table.sql
api/src/: lib.rs
api/src/db/: repository.rs
api/src/domain/: collection.rs  environment.rs  header.rs  mod.rs  request.rs  request_item.rs  response.rs  tab.rs  ui.rs
api/src/utilities/: request.rs  response.rs
api/tests/api/: api.rs  collections.rs  environments.rs  helpers.rs  main.rs  repository.rs  test_collection.json  test_collection_2.json  test_environment.json
gui/: Cargo.toml
gui/src/: events.rs  main.rs
gui/src/components/: content_header_panel.rs  content_panel.rs  content_side_panel.rs  import_modal.rs  menu_panel.rs  mod.rs  new_modal.rs  save_window.rs  side_panel.rs
migrations/: 20231016060640_request.sql  20231016060641_response.sql  20231016060642_request_history.sql  20231025230105_environment.sql  20240914195406_create-tab-table.sql
scripts/: build.sh  bundle.sh  bundle_linux.sh  bundle_macos.sh  bundle_windows.sh  launch.sh  launcher.sh
