[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = "0.4.34"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = "1.0.196"
serde_json = "1.0.113"
serde-xml-rs = "0.6.0"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "sqlite", "uuid" ] }
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
anyhow = "1.0.86"

[dev-dependencies]
wiremock = "0.6.0"
