[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api/" }
base64 = "0.22.0"
directories = "6.0"
egui = { version = "0.33.3", default-features = false }
egui_extras = "0.33.3"
egui_json_tree = "0.14.2"
eframe = "0.33.3"
log = "0.4.20"
rfd = "0.17.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
anyhow = "1.0.86"
cargo-packager-resource-resolver = "0.1.2"

[package.metadata.packager]
product_name = "Postie"
version = "0.0.12"
description = "Lightweight HTTP GUI client for API testing"
authors = ["Michael Blydenburgh"]
identifier = "com.mblydenburgh.postie"
before_packaging_command = "cargo build --release"
out_dir = "../target/release/bundle"
resources = [
  "../scripts/resources/**/*"
]
icons = ["../scripts/resources/postie.png"]

[[package.metadata.packager.binaries]]
path = "gui"
main = true

[package.metadata.packager.macos]
minimum_system_version = "10.13"

[package.metadata.packager.linux]
generate_desktop_entry = true

[package.metadata.packager.windows]
